--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
               <span>Directorio Telefonico</span>
             </a>
             
-            <a href="#" class="shortcut icon_correo azul-oscuro">
-              <span>Solicitud de Correo</span>
+            <a href="https://app.samva.io/samva.io" class="shortcut icon_correo azul-oscuro">
+              <span>Samva</span>
             </a>
           </article>
         </div>
